--- a/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
+++ b/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SetMoneyPasswordViewController">
             <connections>
+                <outlet property="lookPwdAgainBtn" destination="PFA-sx-GJF" id="dae-f0-Qke"/>
                 <outlet property="lookPwdBtn" destination="hrv-ga-YiO" id="PXP-du-dO7"/>
                 <outlet property="moneyAgainPassword" destination="0bi-Kr-IN2" id="OT3-XQ-6aR"/>
                 <outlet property="moneyPassword" destination="ABM-d8-UCz" id="9aU-GT-K1f"/>
@@ -82,24 +83,24 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EKu-S2-TED" userLabel="再次输入">
                     <rect key="frame" x="0.0" y="74" width="375" height="55"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="邮箱验证码" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0FF-xd-sGS">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="再次输入" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0FF-xd-sGS">
                             <rect key="frame" x="25" y="8" width="79" height="39"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="TSP-n5-bd7"/>
                                 <constraint firstAttribute="width" constant="79" id="yOq-FU-Q3u"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0bi-Kr-IN2">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0bi-Kr-IN2">
                             <rect key="frame" x="112" y="19" width="165" height="17"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="165" id="zTh-Ig-Tls"/>
                             </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EnY-Sy-3P2">
                             <rect key="frame" x="0.0" y="53" width="375" height="1"/>
@@ -108,10 +109,10 @@
                                 <constraint firstAttribute="height" constant="1" id="gNr-6d-tdZ"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PFA-sx-GJF">
-                            <rect key="frame" x="285" y="15" width="90" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PFA-sx-GJF">
+                            <rect key="frame" x="333" y="21" width="21" height="12"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="发送验证码">
+                            <state key="normal" image="eye-c">
                                 <color key="titleColor" red="0.95294117649999999" green="0.72941176470000002" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             </state>
                             <connections>
