--- a/StockAnalysis/Login/MailLoginViewController.xib
+++ b/StockAnalysis/Login/MailLoginViewController.xib
@@ -56,7 +56,7 @@
                             </constraints>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ym7-0z-PcG">
-                            <rect key="frame" x="75" y="77" width="263" height="30"/>
+                            <rect key="frame" x="75" y="77" width="227" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -163,7 +163,7 @@
                 <constraint firstItem="o5N-Zh-jvh" firstAttribute="width" secondItem="fbK-JN-iRW" secondAttribute="width" id="syp-Q7-e0J"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ky9-5X-JTh"/>
-            <point key="canvasLocation" x="24.5" y="51.5"/>
+            <point key="canvasLocation" x="23.199999999999999" y="50.824587706146929"/>
         </view>
     </objects>
     <resources>
