--- a/StockAnalysis/Trade/EntryOrderDetailVC.xib
+++ b/StockAnalysis/Trade/EntryOrderDetailVC.xib
@@ -220,7 +220,7 @@
                                 <constraint firstAttribute="height" constant="204" id="88U-Qp-zEI"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C80-MM-rRC" userLabel="View3">
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C80-MM-rRC" userLabel="View3">
                             <rect key="frame" x="0.0" y="396" width="375" height="204"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="时间" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yuh-uh-Wh4">
