--- a/StockAnalysis/Trade/PendingOrderTableViewCell.xib
+++ b/StockAnalysis/Trade/PendingOrderTableViewCell.xib
@@ -62,7 +62,7 @@
                         <rect key="frame" x="301" y="44" width="58" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="textColor" red="0.42352941176470588" green="0.42352941176470588" blue="0.42352941176470588" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0.00009328" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssK-NL-5g2">
@@ -93,13 +93,22 @@
                         <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="已完成" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ay4-Gr-eKs">
+                        <rect key="frame" x="264" y="12" width="95" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.41568627450980389" green="0.41568627450980389" blue="0.41568627450980389" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="amountLabel" destination="IkS-vI-9To" id="qjl-uh-Dpi"/>
+                <outlet property="cancelBtn" destination="IcE-mN-W7W" id="tbt-jv-Kan"/>
                 <outlet property="priceLabel" destination="ssK-NL-5g2" id="NiJ-K8-KQc"/>
                 <outlet property="realLabel" destination="5ty-Gk-3gW" id="1Yn-yi-ZGt"/>
+                <outlet property="stateLabel" destination="Ay4-Gr-eKs" id="g0z-wZ-eEA"/>
                 <outlet property="stockName" destination="w5D-4r-dJ9" id="bhd-dV-NYw"/>
                 <outlet property="timeLabel" destination="Hz9-7M-1xI" id="J9X-Nl-YnV"/>
                 <outlet property="typeLabel" destination="BQ6-WW-G2X" id="PAW-mf-y7W"/>
